// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useOptimize should pick "3": <div>3</div> 1`] = `
<DocumentFragment>
  <div>
    3
  </div>
</DocumentFragment>
`;

exports[`useOptimize should throw without dataLayer or gtag 1`] = `
Array [
  "[@react-hook/google-optimize] Google Tag Manager was not found on your site. Neither \\"gtag()\\" or \\"dataLayer[]\\" could be located on the \\"window\\". If you are not using Google Tag Manager in dev you can ignore this warning. Otherwise, see the Google Tag Manager dev guide for examples: https://developers.google.com/tag-manager/devguide",
]
`;

exports[`useOptimize should timeout and default to "1": <div>1</div> 1`] = `
<DocumentFragment>
  <div>
    1
  </div>
</DocumentFragment>
`;

exports[`useOptimize should timeout and default to "1": <div>null</div> 1`] = `
<DocumentFragment>
  <div>
    null
  </div>
</DocumentFragment>
`;
